--- a/artefact-laravel/src/entities/catalogue/catalogue.handlebars
+++ b/artefact-laravel/src/entities/catalogue/catalogue.handlebars
@@ -1,5 +1,8 @@
 <tr>
-   <td>{{editionno}}</td>
-   <td>{{productno}}</td>
+   <td><img src={{lienimage}}></img></td>
+   <td>{{no}}</td>
+   <td>{{shortdescr}}</td>
+   <td>{{longdescr}}</td>
+   <td>{{catalogue.editionno}}</td>
 
 </tr>
