--- a/artefact-laravel/public/css/style.css
+++ b/artefact-laravel/public/css/style.css
@@ -1,3 +1,8 @@
 body {
     background-color: #FCFCFC;
 }
+
+.panel-collapse-collapse-in{margin-top:50px;}
+.panel-body { padding:0px; }
+.panel-body table tr td { padding-left: 15px }
+.panel-body .table {margin-bottom: 0px; }
