le coup depouce

--- a/artefact-laravel/src/entities/catalogue/catalogue.handlebars
+++ b/artefact-laravel/src/entities/catalogue/catalogue.handlebars
@@ -1,8 +1,8 @@
 <tr>
-   <td><img src={{lienimage}}></img></td>
-   <td>{{no}}</td>
-   <td>{{shortdescr}}</td>
-   <td>{{longdescr}}</td>
+   <td><img src={{product.lienimage}}></img></td>
+   <td>{{product.no}}</td>
+   <td>{{product.shortdescr}}</td>
+   <td>{{product.longdescr}}</td>
    <td>{{catalogue.editionno}}</td>
 
 </tr>
