--- a/artefact-laravel/public/css/style.css
+++ b/artefact-laravel/public/css/style.css
@@ -7,3 +7,7 @@ body {
 .panel-body { padding:0px; }
 .panel-body table tr td { padding-left: 15px }
 .panel-body .table {margin-bottom: 0px; }
+
+img {
+	max-width: 50%;
+}
