--- a/artefact-laravel/public/css/style.css
+++ b/artefact-laravel/public/css/style.css
@@ -8,6 +8,13 @@ body {
 .panel-body table tr td { padding-left: 15px }
 .panel-body .table {margin-bottom: 0px; }
 
-img {
-	max-width: 50%;
+a.list-group-item {
+    height:auto;
+    min-height:220px;
+}
+a.list-group-item.active small {
+    color:#fff;
+}
+.stars {
+    margin:20px auto 1px;    
 }
