rajoue du css dans index

--- a/artefact-laravel/public/css/styleProduitX-TestX.css
+++ b/artefact-laravel/public/css/styleProduitX-TestX.css
@@ -12,8 +12,14 @@ body {
 header {
     background-color: #FCFCFC;
 }
-nav {
-    background-color: #8b7f7d;
+nav > ul > li > a {
+    color: #fcfcfc;
+    font-family: FiraSans-Regular;
+}
+
+nav > ul > li > a:hover {
+    color: #d29349;
+    text-decoration:none;
 }
 
 div > h1 {
