--- a/artefact-laravel/src/entities/product/product.handlebars
+++ b/artefact-laravel/src/entities/product/product.handlebars
@@ -1,10 +1,4 @@
-<tr class=" ">
+<tr class="">
    <td class="col-md-3"><img src={{lienimage}} class="img-thumbnail imgproduct "></img></td>
-   {{!-- <td class=".col-md-2">{{no}}</td> --}}
-   <td class="col-md-6"><p>{{brand.name}}</p><p>{{shortdescr}}</p><p>{{longdescr}}</p></td>
-
-
-   {{!-- <td class=".col-md-2">{{editions.0.eventno}}</td> --}}
-
-
+   <td class="col-md-6">{{brand.name}}</br>{{shortdescr}}</br>{{longdescr}}</td>
 </tr>
