--- a/artefact-laravel/public/css/products.css
+++ b/artefact-laravel/public/css/products.css
@@ -7,3 +7,10 @@
 margin:auto;
     align-items: center;
 }
+#pageProduct{
+    width: 90%;
+    margin:auto;
+}
+#productSearch{
+    width: 30%;
+}
