--- a/artefact-laravel/public/css/styleProduitX-TestX.css
+++ b/artefact-laravel/public/css/styleProduitX-TestX.css
@@ -67,3 +67,15 @@ button > a {
     padding: 10px;
 
 }
+
+#back:hover {
+        text-decoration:none;
+        background-color: #d29349;
+        font-family: FiraSans-Bold;
+        color: #FCFCFC;
+} 
+    
+#back {
+        text-decoration:none;
+        color: #4f4e4f;
+    }
