--- a/artefact-laravel/src/entities/test/test.handlebars
+++ b/artefact-laravel/src/entities/test/test.handlebars
@@ -1,4 +1,4 @@
-<tr>
+{{!-- <tr>
    <td><img src={{lienimage}}></img></td>
    <td>{{no}}</td>
    <td>{{periodno}}</td>
@@ -8,4 +8,33 @@
    <td>{{endtime}}</td>
    <td>{{stars}}</td>
    <td>{{feedback}}</td>
-</tr>
+</tr> --}}
+
+ <div class="row">
+                <div class="well">
+                <div class="list-group">
+                  <a href="#" class="list-group-item active">
+                        <div class="media col-md-3">
+                            <figure class="pull-left">
+                                <img class="media-object img-rounded img-responsive"  src="{{lienimage}}" alt="{{product.shortdescr}}" >
+                            </figure>
+                        </div>
+                        <div class="col-md-6">
+                            <h4 class="list-group-item-heading"> {{product.distinctivesign}} </h4>
+                            <p class="list-group-item-text"> {{product.shortdescr}} </p>
+                            <p class="list-group-item-text"> {{product.longdescr}} </p>
+                        </div>
+                        <div class="col-md-3 text-center">
+                            <div class="stars">
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star-empty"></span>
+                            </div>
+                            <p> {{test.starttime}} </p>
+                        </div>
+                  </a> 
+                </div>
+                </div>
+              </div>
