--- a/artefact-laravel/public/css/products.css
+++ b/artefact-laravel/public/css/products.css
@@ -1,7 +1,3 @@
-.imgproduct{
-    width:50%;
-    margin: auto;
-}
 #productTable{
     width: 80%;
 margin:auto;
@@ -15,6 +11,8 @@ margin:auto;
     width: 30%;
 }
 .card{
-    display: flex;
+    display: flexbox;
 
 }
+.filterDiv{
+padding:1rem}
