--- a/artefact-laravel/src/entities/test/test.handlebars
+++ b/artefact-laravel/src/entities/test/test.handlebars
@@ -13,18 +13,19 @@
  <div class="row">
                 <div class="well">
                 <div class="list-group">
-                  <a href="#" class="list-group-item active">
+                  <a href="#" class="list-group-item active test">
                         <div class="media col-md-3">
                             <figure class="pull-left">
-                                <img class="media-object img-rounded img-responsive"  src="{{lienimage}}" alt="{{product.shortdescr}}" >
+                                <img class="media-object img-rounded img-responsive"  src="{{product.lienimage}}" alt="{{product.shortdescr}}" >
                             </figure>
                         </div>
                         <div class="col-md-6">
-                            <h4 class="list-group-item-heading"> {{product.distinctivesign}} </h4>
-                            <p class="list-group-item-text"> {{product.shortdescr}} </p>
-                            <p class="list-group-item-text"> {{product.longdescr}} </p>
+                            <h4 class=""> {{product.distinctivesign}} </h4>
+                            <p class=""> {{product.shortdescr}} </p>
+                            <p class=""> {{feedback}} </p>
                         </div>
                         <div class="col-md-3 text-center">
+                            <p>Note attribuée: </p>
                             <div class="stars">
                                 <span class="glyphicon glyphicon-star"></span>
                                 <span class="glyphicon glyphicon-star"></span>
@@ -32,7 +33,9 @@
                                 <span class="glyphicon glyphicon-star"></span>
                                 <span class="glyphicon glyphicon-star-empty"></span>
                             </div>
-                            <p> {{test.starttime}} </p>
+                            <p> Test fait le : </p>
+                         <p> {{starttime}} </p>
+
                         </div>
                   </a> 
                 </div>
